# calculator

./: CMakeLists.txt  README.md
src/: calculator.cpp  calculator.h  fraction.cpp  fraction.h  main.cpp  test.in
